--- a/slides/18-prob-odds.qmd
+++ b/slides/18-prob-odds.qmd
@@ -428,7 +428,7 @@ p1 / (p2 + p3)
 
 -   $\log\big(\frac{\pi}{1-\pi}\big)$: **log odds**
 
--   Go from $p$ to $\log\big(\frac{\pi}{1-\pi}\big)$ using the **logit transformation**
+-   Go from $\pi$ to $\log\big(\frac{\pi}{1-\pi}\big)$ using the **logit transformation**
 :::
 
 ## Example
